--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@popperjs/core": "^2.11.6",
     "@rails/activestorage": "^7.0.4",
     "@rails/ujs": "^7.0.4",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "3.4.1",
     "css-loader": "^6.7.1",
     "jquery": "3.4.1",
+    "jquery-mousewheel": "^3.1.13",
     "rails-ujs": "^5.2.8-1",
+    "select2": "^4.1.0-rc.0",
+    "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
